--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -263,3 +263,18 @@ ul {
 .mypage-list {
   width: 100%;
 } 
+
+mark.basic {
+  background: none;
+}
+
+.divider {
+  border: 0.5px solid lightgray;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
