--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -15,6 +15,11 @@ nav a {
 
 }
 
+nav a:hover {
+  text-decoration: none;
+  color: #302f33;
+}
+
 @font-face {
   font-family: "nsr";
   src: url("../fonts/NanumSquareNeo-cBd.ttf");
@@ -30,6 +35,7 @@ nav a {
 
 #enjoyTrip {
   color:#198754;
+  font-size:x-large;
 }
 
 .top-font {
